TPCs/SociedadeAnonima/gen/SociedadeAnonimaParser.java
// Generated from /Users/rafaelsilva/Desktop/work_space/GCS-1920/SociedadeAnonima/src/SociedadeAnonima.g4 by ANTLR 4.7.2

    import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SociedadeAnonimaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, SC=27, COMMA=28, LPAREN=29, RPAREN=30, HI=31, SP=32, 
		BAR=33, AND=34, WORD=35, NUM=36, SEPARATOR=37;
	public static final int
		RULE_empresa = 0, RULE_sociedadeAnonimas = 1, RULE_sociedadeAnonima = 2, 
		RULE_nomeEmpresa = 3, RULE_localizacao = 4, RULE_cidade = 5, RULE_rua = 6, 
		RULE_objetivo = 7, RULE_ramo = 8, RULE_socios = 9, RULE_socio = 10, RULE_nome = 11, 
		RULE_capital = 12, RULE_cota = 13, RULE_papel = 14, RULE_funcionarios = 15, 
		RULE_funcionario = 16, RULE_numeroMecanografico = 17, RULE_dataNascimento = 18, 
		RULE_contactos = 19, RULE_contacto = 20, RULE_telemovel = 21, RULE_email = 22, 
		RULE_funcao = 23, RULE_entrada = 24, RULE_assembleiaGerais = 25, RULE_assembleiaGeral = 26, 
		RULE_listaSocios = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"empresa", "sociedadeAnonimas", "sociedadeAnonima", "nomeEmpresa", "localizacao", 
			"cidade", "rua", "objetivo", "ramo", "socios", "socio", "nome", "capital", 
			"cota", "papel", "funcionarios", "funcionario", "numeroMecanografico", 
			"dataNascimento", "contactos", "contacto", "telemovel", "email", "funcao", 
			"entrada", "assembleiaGerais", "assembleiaGeral", "listaSocios"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Nome Empresa: '", "'Cidade: '", "'Rua: '", "'Objetivo: '", "'AGRICULTURA'", 
			"'INDUSTRIA'", "'COMERCIO'", "'Socio: '", "'\u20AC'", "'%'", "'SOCIO'", 
			"'ADMINISTRADOR'", "'Funcionario: '", "'F'", "'Telemovel: '", "'Telefone: '", 
			"'Email: '", "'@'", "'.com'", "'GERENTE'", "'PRODUCAO'", "'ESCRITORIO'", 
			"'ARMAZEM'", "'AG: '", "'Presidente: '", "'Socios: '", "';'", "','", 
			"'['", "']'", "'-'", "'<->'", "'/'", "'&'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "SC", "COMMA", "LPAREN", "RPAREN", "HI", "SP", "BAR", 
			"AND", "WORD", "NUM", "SEPARATOR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SociedadeAnonima.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    List<String> listSocios = new ArrayList<>();

	public SociedadeAnonimaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class EmpresaContext extends ParserRuleContext {
		public SociedadeAnonimasContext sociedadeAnonimas;
		public SociosContext socios;
		public FuncionariosContext funcionarios;
		public TerminalNode LPAREN() { return getToken(SociedadeAnonimaParser.LPAREN, 0); }
		public SociedadeAnonimasContext sociedadeAnonimas() {
			return getRuleContext(SociedadeAnonimasContext.class,0);
		}
		public List<TerminalNode> SC() { return getTokens(SociedadeAnonimaParser.SC); }
		public TerminalNode SC(int i) {
			return getToken(SociedadeAnonimaParser.SC, i);
		}
		public SociosContext socios() {
			return getRuleContext(SociosContext.class,0);
		}
		public FuncionariosContext funcionarios() {
			return getRuleContext(FuncionariosContext.class,0);
		}
		public AssembleiaGeraisContext assembleiaGerais() {
			return getRuleContext(AssembleiaGeraisContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SociedadeAnonimaParser.RPAREN, 0); }
		public EmpresaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_empresa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).enterEmpresa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).exitEmpresa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SociedadeAnonimaVisitor ) return ((SociedadeAnonimaVisitor<? extends T>)visitor).visitEmpresa(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EmpresaContext empresa() throws RecognitionException {
		EmpresaContext _localctx = new EmpresaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_empresa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(LPAREN);
			setState(57);
			((EmpresaContext)_localctx).sociedadeAnonimas = sociedadeAnonimas();
			setState(58);
			match(SC);
			setState(59);
			((EmpresaContext)_localctx).socios = socios();
			setState(60);
			match(SC);
			setState(61);
			((EmpresaContext)_localctx).funcionarios = funcionarios();
			setState(62);
			match(SC);
			setState(63);
			assembleiaGerais();
			setState(64);
			match(RPAREN);

			            System.out.println("------------Informação Sócios-----------");
			            System.out.println("Número de Sócios: " + ((EmpresaContext)_localctx).socios.numSocios);
			            if(((EmpresaContext)_localctx).socios.cotaTotal != 100) {
			                System.out.println("Cotas erradas...");
			                System.out.println("Verificar por favor as cotas...");
			            } else {
			                System.out.println("Cotas certas !!!");
			            }
			                System.out.println("------------Informação Ramos------------");
			                System.out.println("Total Ramos: " + (((EmpresaContext)_localctx).sociedadeAnonimas.totalA + ((EmpresaContext)_localctx).sociedadeAnonimas.totalI + ((EmpresaContext)_localctx).sociedadeAnonimas.totalC));
			                System.out.println("Total AGRICULTURA: " + ((EmpresaContext)_localctx).sociedadeAnonimas.totalA);
			                System.out.println("Total INDUSTRIA: " + ((EmpresaContext)_localctx).sociedadeAnonimas.totalI);
			                System.out.println("Total COMERCIO: " + ((EmpresaContext)_localctx).sociedadeAnonimas.totalC);
			                System.out.println("----------Informações Adicionais--------");
			                if(((EmpresaContext)_localctx).socios.flagAdmin==1) {
			                    System.out.println("Falta adicionar um ADMINISTRADOR aos Sócios...");
			                }
			                if(((EmpresaContext)_localctx).funcionarios.flagGere==1) {
			                    System.out.println("Falta adicionar um GERENTE aos Funcionários...");
			                }
			                if(((EmpresaContext)_localctx).socios.flagAdmin!=1 && ((EmpresaContext)_localctx).funcionarios.flagGere!=1) {
			                    System.out.println("Nada a acrescentar !!!");
			                }
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SociedadeAnonimasContext extends ParserRuleContext {
		public String noEmp;
		public String ram;
		public int totalA;
		public int totalI;
		public int totalC;
		public SociedadeAnonimaContext sociedadeAnonima;
		public SociedadeAnonimasContext sociedadeAnonimas;
		public SociedadeAnonimaContext sociedadeAnonima() {
			return getRuleContext(SociedadeAnonimaContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(SociedadeAnonimaParser.COMMA, 0); }
		public SociedadeAnonimasContext sociedadeAnonimas() {
			return getRuleContext(SociedadeAnonimasContext.class,0);
		}
		public SociedadeAnonimasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sociedadeAnonimas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).enterSociedadeAnonimas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).exitSociedadeAnonimas(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SociedadeAnonimaVisitor ) return ((SociedadeAnonimaVisitor<? extends T>)visitor).visitSociedadeAnonimas(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SociedadeAnonimasContext sociedadeAnonimas() throws RecognitionException {
		SociedadeAnonimasContext _localctx = new SociedadeAnonimasContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sociedadeAnonimas);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				((SociedadeAnonimasContext)_localctx).sociedadeAnonima = sociedadeAnonima();

				                        ((SociedadeAnonimasContext)_localctx).noEmp =  ((SociedadeAnonimasContext)_localctx).sociedadeAnonima.noEmp;
				                        _localctx.totalA += ((SociedadeAnonimasContext)_localctx).sociedadeAnonima.totalA;
				                        _localctx.totalI += ((SociedadeAnonimasContext)_localctx).sociedadeAnonima.totalI;
				                        _localctx.totalC += ((SociedadeAnonimasContext)_localctx).sociedadeAnonima.totalC;
				                  
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				((SociedadeAnonimasContext)_localctx).sociedadeAnonima = sociedadeAnonima();
				setState(71);
				match(COMMA);
				setState(72);
				((SociedadeAnonimasContext)_localctx).sociedadeAnonimas = sociedadeAnonimas();

				                         _localctx.totalA += ((SociedadeAnonimasContext)_localctx).sociedadeAnonima.totalA + ((SociedadeAnonimasContext)_localctx).sociedadeAnonimas.totalA;
				                         _localctx.totalI += ((SociedadeAnonimasContext)_localctx).sociedadeAnonima.totalI + ((SociedadeAnonimasContext)_localctx).sociedadeAnonimas.totalI;
				                         _localctx.totalC += ((SociedadeAnonimasContext)_localctx).sociedadeAnonima.totalC + ((SociedadeAnonimasContext)_localctx).sociedadeAnonimas.totalC;
				                  
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SociedadeAnonimaContext extends ParserRuleContext {
		public String noEmp;
		public String ram;
		public int totalA;
		public int totalI;
		public int totalC;
		public NomeEmpresaContext nomeEmpresa;
		public ObjetivoContext objetivo;
		public NomeEmpresaContext nomeEmpresa() {
			return getRuleContext(NomeEmpresaContext.class,0);
		}
		public LocalizacaoContext localizacao() {
			return getRuleContext(LocalizacaoContext.class,0);
		}
		public ObjetivoContext objetivo() {
			return getRuleContext(ObjetivoContext.class,0);
		}
		public SociedadeAnonimaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sociedadeAnonima; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).enterSociedadeAnonima(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).exitSociedadeAnonima(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SociedadeAnonimaVisitor ) return ((SociedadeAnonimaVisitor<? extends T>)visitor).visitSociedadeAnonima(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SociedadeAnonimaContext sociedadeAnonima() throws RecognitionException {
		SociedadeAnonimaContext _localctx = new SociedadeAnonimaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sociedadeAnonima);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			((SociedadeAnonimaContext)_localctx).nomeEmpresa = nomeEmpresa();
			setState(78);
			localizacao();
			setState(79);
			((SociedadeAnonimaContext)_localctx).objetivo = objetivo();

			                        System.out.println("-----------Empresa Individual-----------");
			                        System.out.println("Nome Empresa: " + ((SociedadeAnonimaContext)_localctx).nomeEmpresa.noEmp);
			                        System.out.println("Ramo da empresa: " +  ((SociedadeAnonimaContext)_localctx).objetivo.ram);
			                        if (((SociedadeAnonimaContext)_localctx).objetivo.ram.equals("AGRICULTURA")) ((SociedadeAnonimaContext)_localctx).totalA =  1;
			                        if (((SociedadeAnonimaContext)_localctx).objetivo.ram.equals("INDUSTRIA")) ((SociedadeAnonimaContext)_localctx).totalI =  1;
			                        if (((SociedadeAnonimaContext)_localctx).objetivo.ram.equals("COMERCIO")) ((SociedadeAnonimaContext)_localctx).totalC =  1;
			                 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NomeEmpresaContext extends ParserRuleContext {
		public String noEmp;
		public Token WORD;
		public TerminalNode WORD() { return getToken(SociedadeAnonimaParser.WORD, 0); }
		public NomeEmpresaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nomeEmpresa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).enterNomeEmpresa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).exitNomeEmpresa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SociedadeAnonimaVisitor ) return ((SociedadeAnonimaVisitor<? extends T>)visitor).visitNomeEmpresa(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NomeEmpresaContext nomeEmpresa() throws RecognitionException {
		NomeEmpresaContext _localctx = new NomeEmpresaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_nomeEmpresa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__0);
			setState(83);
			((NomeEmpresaContext)_localctx).WORD = match(WORD);

			               ((NomeEmpresaContext)_localctx).noEmp =  (((NomeEmpresaContext)_localctx).WORD!=null?((NomeEmpresaContext)_localctx).WORD.getText():null);
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalizacaoContext extends ParserRuleContext {
		public CidadeContext cidade() {
			return getRuleContext(CidadeContext.class,0);
		}
		public TerminalNode HI() { return getToken(SociedadeAnonimaParser.HI, 0); }
		public RuaContext rua() {
			return getRuleContext(RuaContext.class,0);
		}
		public LocalizacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localizacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).enterLocalizacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).exitLocalizacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SociedadeAnonimaVisitor ) return ((SociedadeAnonimaVisitor<? extends T>)visitor).visitLocalizacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LocalizacaoContext localizacao() throws RecognitionException {
		LocalizacaoContext _localctx = new LocalizacaoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_localizacao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			cidade();
			setState(87);
			match(HI);
			setState(88);
			rua();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CidadeContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(SociedadeAnonimaParser.WORD, 0); }
		public CidadeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cidade; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).enterCidade(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).exitCidade(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SociedadeAnonimaVisitor ) return ((SociedadeAnonimaVisitor<? extends T>)visitor).visitCidade(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CidadeContext cidade() throws RecognitionException {
		CidadeContext _localctx = new CidadeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cidade);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(T__1);
			setState(91);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuaContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(SociedadeAnonimaParser.WORD, 0); }
		public RuaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rua; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).enterRua(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).exitRua(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SociedadeAnonimaVisitor ) return ((SociedadeAnonimaVisitor<? extends T>)visitor).visitRua(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuaContext rua() throws RecognitionException {
		RuaContext _localctx = new RuaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_rua);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(T__2);
			setState(94);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjetivoContext extends ParserRuleContext {
		public String ram;
		public RamoContext ramo;
		public TerminalNode WORD() { return getToken(SociedadeAnonimaParser.WORD, 0); }
		public TerminalNode SP() { return getToken(SociedadeAnonimaParser.SP, 0); }
		public RamoContext ramo() {
			return getRuleContext(RamoContext.class,0);
		}
		public ObjetivoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objetivo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).enterObjetivo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).exitObjetivo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SociedadeAnonimaVisitor ) return ((SociedadeAnonimaVisitor<? extends T>)visitor).visitObjetivo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjetivoContext objetivo() throws RecognitionException {
		ObjetivoContext _localctx = new ObjetivoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_objetivo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__3);
			setState(97);
			match(WORD);
			setState(98);
			match(SP);
			setState(99);
			((ObjetivoContext)_localctx).ramo = ramo();

			            ((ObjetivoContext)_localctx).ram =  ((ObjetivoContext)_localctx).ramo.ram;
			         
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RamoContext extends ParserRuleContext {
		public String ram;
		public RamoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ramo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).enterRamo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SociedadeAnonimaListener ) ((SociedadeAnonimaListener)listener).exitRamo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SociedadeAnonimaVisitor ) return ((SociedadeAnonimaVisitor<? extends T>)visitor).visitRamo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RamoContext ramo() throws RecognitionException {
		RamoContext _localctx = new RamoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ramo);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				match(T__4);

				        ((RamoContext)_localctx).ram =  "AGRICULTURA";
				     
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				match(T__5);

				        ((RamoContext)_localctx).ram =  "INDUSTRIA";
				     
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 3);
				{
				setState(106);
				match(T__6);

				        ((RamoContext)_localctx).ram =  "COMERCIO";
				     
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
